--- a/package.json
+++ b/package.json
@@ -20,17 +20,18 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/typeorm": "^10.0.0",
     "@nestjs/swagger": "^7.0.0",
-    "typeorm": "^0.3.17",
-    "mysql2": "^3.6.0",
-    "class-validator": "^0.14.0",
+    "@nestjs/typeorm": "^10.0.0",
+    "bytenode": "^1.5.7",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "ethers": "^6.11.1",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0",
-    "multer": "^1.4.5-lts.1",
-    "ethers": "^6.11.1"
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -38,8 +39,8 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
     "@types/multer": "^1.4.7",
+    "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
